Major refactoring of the services architecture

--- a/services/wareshub/templates/404.html
+++ b/services/wareshub/templates/404.html
@@ -5,11 +5,11 @@
   <br/>
   <br/>
   <h1>
-    Oops, 500!
+    Oops, 404!
     <br/>
-    Internal server error
+    This page does not exist
   </h1>
   <br/>
-  <a href='/{{ WaresType }}'>Take me back where it may work</a>
+  <a href='{{ url_for('wareshubUI.Root') }}'>Take me back to the existing world</a>
 </div>
 {% endblock %}
