--- a/services/wareshub/templates/base.html
+++ b/services/wareshub/templates/base.html
@@ -6,7 +6,7 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400|Open+Sans+Condensed:300,400' rel='stylesheet' type='text/css'>
     <link rel='stylesheet' href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css'>
     <link rel='stylesheet' href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css'>
-    <link rel='stylesheet' type=text/css href="{{ url_for('static', filename='wareshub.css') }}">
+    <link rel='stylesheet' type=text/css href="{{ url_for('wareshubUI.static', filename='wareshub.css') }}">
     <script src='//code.jquery.com/jquery-1.11.0.min.js'></script>
     <script src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js'></script>
 
