Introduction of login management in UI
* Added login form and logic
* Added search system in wares list
* Cleaned code

--- a/fluidhub/app/wareshub/templates/base.html
+++ b/fluidhub/app/wareshub/templates/base.html
@@ -1,3 +1,4 @@
+{% from "login.html" import login_box %}
 <!DOCTYPE html>
 <html>
   <head>
@@ -22,7 +23,7 @@
       <nav class='navbar navbar-topmenu' role='navigation'>
         <div class='container'>
           <div class='navbar-header'>{{ Title }}</div>
-          <div class=''>{{ LoginBox }}</div>
+          <div class=''>{{ login_box(g.LoginF) }}</div>
         </div>
       </nav>
       {% block content %}{% endblock %}
