--- a/fluidhub/app/wareshub/templates/waredetails.html
+++ b/fluidhub/app/wareshub/templates/waredetails.html
@@ -3,7 +3,7 @@
 <div class='container'>
   <br/>
   <h3>
-    <a href='{{ url_for('wareshubUI.Root') }}'><span class='glyphicon glyphicon-list'></span>
+    <a href='{{ url_for('wareshubUI.GetWares') }}'><span class='glyphicon glyphicon-list'></span>
     </a>&nbsp;/&nbsp;<a href='{{ url_for('wareshubUI.GetWares',ware_type=WaresType) }}'>{{ WaresType }}</a>&nbsp;/&nbsp;{{ WareID }}
   </h3>
   <h4>{{ Def.ShortDesc }}</h4>
