--- a/fluidhub/app/wareshub/templates/404.html
+++ b/fluidhub/app/wareshub/templates/404.html
@@ -10,6 +10,6 @@
     This page does not exist
   </h1>
   <br/>
-  <a href='{{ url_for('wareshubUI.Root') }}'>Take me back to the existing world</a>
+  <a href='{{ url_for('wareshubUI.GetWares') }}'>Take me back to the existing world</a>
 </div>
 {% endblock %}
