Refactoring of the UI part

--- a/fluidhub/app/ui/static/wareshub.css
+++ b/fluidhub/app/ui/static/wareshub.css
@@ -39,7 +39,7 @@ hr.warepage {
 
 .navbar {
   border-radius: 0;
-  background-color: #506076;
+  background-color: #343c47;
   max-width: none !important;
   border: 0;
   -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, .1);
