--- a/fluidhub/app/ui/templates/base.html
+++ b/fluidhub/app/ui/templates/base.html
@@ -5,11 +5,11 @@
     <meta http-equiv='content-type' content='text/html; charset=UTF-8'>
     <title>{{ Title }}</title>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400|Open+Sans+Condensed:300,400' rel='stylesheet' type='text/css'>
-    <link rel='stylesheet' href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css'>
-    <link rel='stylesheet' href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css'>
-    <link rel='stylesheet' type=text/css href="{{ url_for('wareshubUI.static', filename='wareshub.css') }}">
-    <script src='//code.jquery.com/jquery-1.11.0.min.js'></script>
-    <script src='//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js'></script>
+    <link rel='stylesheet' href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css'>
+    <link rel='stylesheet' type=text/css href="{{ url_for('.static', filename='wareshub.css') }}">
+    <script src='http://code.jquery.com/jquery-1.11.0.min.js'></script>
+    <script src='http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js'></script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
