Major major update of UI and dependent features
* Introduced administration features
* Added scss assets for css management using sass
* Improved wares and users management
* Updated tests

--- a/fluidhub/app/ui/templates/404.html
+++ b/fluidhub/app/ui/templates/404.html
@@ -10,6 +10,6 @@
     This page does not exist
   </h1>
   <br/>
-  <a href='{{ url_for('.Root') }}'>Take me back to the existing world</a>
+  <a href='{{ url_for('.Home') }}'>Take me back to the existing world</a>
 </div>
 {% endblock %}
