--- a/fluidhub/app/ui/templates/500.html
+++ b/fluidhub/app/ui/templates/500.html
@@ -10,6 +10,6 @@
     Internal server error
   </h1>
   <br/>
-  <a href='{{ url_for('.Root') }}'>Take me back where it may works</a>
+  <a href='{{ url_for('.Home') }}'>Take me back where it may works</a>
 </div>
 {% endblock %}
